# AIDriveBot

./: 10.cpp  10.py  11-1.cpp  11-2-3.cpp  11-2.cpp  11-3.cpp  11-4.cpp  11.cpp  11.py  12-1.cpp  12-2.cpp  12-3.cpp  12.cpp  2.py  3.py  4.py  5.py  7-1.py  7-2.py  7-3.py  7.py  8.cpp  9-1.py  9.1.py  PID.cpp  README.md  capston_2021.cpp  encoderPos.cpp  gyro_sensor.cpp  mmotor.cpp  motor.cpp  motor1.cpp  motor2.cpp  motorA_pid.cpp  motorB_pid.cpp  motorL_pid.cpp  motorR_pid.cpp  motor_PID.cpp  motor_control.cpp  motor_coordinate_PID.cpp  (+9 more)
face_voice/: cameracheck.py  cucheck.py  doublecameracheck.py  main(dual).py  main(single).py  main(single)2.py  main(single)_tcp.py  main(tcp).py  main(tcp)2.py  main(tcp)3.py  multi_face0.py  multi_face1.py  multi_voice.py  multi_voice2.py  multi_voice3.py  multi_voice4.py
lidar/: CMakeLists.txt  ydlidar_ros2_driver_node.cpp  ydlidar_ros_driver.cpp
lidar/tcpip_topic_publisher/: CMakeLists.txt  package.xml
lidar/tcpip_topic_publisher/src/: tcpip_topic_publisher_node.cpp  tcpiptest
motor/: dual_motor_pid_360deg.py  lidar_pid_full_control.cpp  motor_pid.cpp  motor_pid_multi_direction.py  motor_pid_xy_controller.cpp
motor/motor_encoder_test/: motor_encoder_limit_stop.py  motor_pwm_accel.py
tcp/: tcp(jetson).py  tcp(send).py
